--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "20.1.4",
@@ -20,6 +22,8 @@
     "@nx/next": "20.1.4",
     "@nx/playwright": "20.1.4",
     "@nx/react": "20.1.4",
+    "@nx/vite": "20.1.4",
+    "@nx/web": "20.1.4",
     "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
@@ -30,6 +34,9 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
@@ -42,6 +49,7 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "~22.1.0",
     "nx": "20.1.4",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -50,6 +58,9 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
+    "vitest": "^1.3.1"
   }
 }
