--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "next": "14.2.16",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "15.0.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -27,40 +27,46 @@
     "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
+    "@swc/core": "~1.10.0",
     "@swc/helpers": "~0.5.11",
-    "@testing-library/react": "15.0.6",
+    "@testing-library/react": "16.0.1",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.3.1",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.16",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-playwright": "^2.1.0",
+    "eslint-plugin-react": "7.37.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "~22.1.0",
+    "jsdom": "~25.0.1",
     "nx": "20.1.4",
-    "postcss": "8.4.38",
-    "prettier": "^2.6.2",
+    "postcss": "8.4.49",
+    "prettier": "^3.4.2",
     "tailwindcss": "3.4.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "~3.8.1",
-    "vitest": "^1.3.1"
+    "tslib": "^2.8.1",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.17.0",
+    "vite": "^6.0.3",
+    "vite-plugin-dts": "~4.3.0",
+    "vitest": "^2.1.8"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
   }
 }
