--- a/package.json
+++ b/package.json
@@ -7,30 +7,32 @@
   "dependencies": {
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "tailwindcss": "4.0.0-beta.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.8.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@eslint/compat": "^1.2.4",
+    "@eslint/js": "^9.16.0",
     "@nx/devkit": "20.1.4",
     "@nx/eslint": "20.1.4",
     "@nx/eslint-plugin": "20.1.4",
     "@nx/jest": "20.1.4",
     "@nx/js": "20.1.4",
     "@nx/next": "20.1.4",
-    "@nx/playwright": "20.1.4",
+    "@nx/playwright": "^20.1.4",
     "@nx/react": "20.1.4",
-    "@nx/vite": "20.1.4",
+    "@nx/vite": "^20.1.4",
     "@nx/web": "20.1.4",
     "@nx/workspace": "20.1.4",
-    "@playwright/test": "^1.36.0",
-    "@swc-node/register": "~1.9.1",
+    "@playwright/test": "^1.49.0",
+    "@swc-node/register": "~1.9.2",
     "@swc/core": "~1.10.0",
-    "@swc/helpers": "~0.5.11",
+    "@swc/helpers": "~0.5.15",
+    "@tailwindcss/vite": "4.0.0-beta.5",
     "@testing-library/react": "16.0.1",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/node": "18.16.9",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
@@ -39,7 +41,9 @@
     "@vitest/ui": "^2.1.8",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.15.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^9.16.0",
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
@@ -53,13 +57,13 @@
     "nx": "20.1.4",
     "postcss": "8.4.49",
     "prettier": "^3.4.2",
-    "tailwindcss": "3.4.3",
+    "tailwind-merge": "^2.5.5",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
     "tslib": "^2.8.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.17.0",
-    "vite": "^6.0.3",
+    "vite": "^5.4.11",
     "vite-plugin-dts": "~4.3.0",
     "vitest": "^2.1.8"
   },
