--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "main": "./index.js",
   "types": "./index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
-      "import": "./index.mjs",
-      "require": "./index.js"
     }
   }
 }
