--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "exports": {
     ".": {
-    }
+      "import": "./index.js",
+      "require": "./index.js"
+    },
+    "./package.json": "./package.json"
   }
 }
