--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@e-class-monorepo/source",
+  "name": "@dad-e-class/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
@@ -31,6 +31,7 @@
     "@swc/core": "~1.10.0",
     "@swc/helpers": "~0.5.15",
     "@tailwindcss/vite": "4.0.0-beta.5",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "16.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "18.16.9",
@@ -51,12 +52,14 @@
     "eslint-plugin-playwright": "^2.1.0",
     "eslint-plugin-react": "7.37.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "glob": "^11.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~25.0.1",
     "nx": "20.1.4",
     "postcss": "8.4.49",
     "prettier": "^3.4.2",
+    "rollup-preserve-directives": "^1.1.3",
     "tailwind-merge": "^2.5.5",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
