--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwindcss": "4.0.0-beta.5"
+    "@tailwindcss/postcss": "4.0.0-beta.8",
+    "next": "15.1.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwindcss": "4.0.0-beta.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -31,12 +32,13 @@
     "@swc/core": "~1.10.0",
     "@swc/helpers": "~0.5.15",
     "@tailwindcss/vite": "4.0.0-beta.5",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "16.0.1",
+    "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.14",
     "@types/node": "18.16.9",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
@@ -45,7 +47,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.16.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
@@ -72,8 +74,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+      "@types/react": "19.0.2",
+      "@types/react-dom": "19.0.2"
     }
   }
 }
