--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -9,6 +9,9 @@
       "import": "./index.js",
       "require": "./index.js"
     },
+    "./css/tailwind.css": {
+      "import": "./css/tailwind.js"
+    },
     "./package.json": "./package.json"
   }
 }
