--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@maany_shr/e-class-ui-kit/tailwind.css": ["packages/ui-kit/lib/assets/css/tailwind.css"],
+      "@maany_shr/e-class-ui-kit/contexts": ["packages/ui-kit/lib/contexts/index.ts"],
       "@maany_shr/e-class-ui-kit": ["packages/ui-kit/lib/index.ts"]
     }
   },
