build(ui-kit): use @nx/dependency-checks to generate dependency section of package.json for ui kit
Even though @nx/vite build target can be configured to generatePackageJson option. However, as seen in their code
https://github.com/nrwl/nx/blob/master/packages/vite/src/executors/build/build.impl.ts#L120-L121

`The project ${context.projectName} is using the 'generatePackageJson' option which is deprecated for library projects. It should only be used for applications.
        For libraries, configure the project to use the '@nx/dependency-checks' ESLint rule instead (https://nx.dev/nx-api/eslint-plugin/documents/dependency-checks).`

--- a/packages/ui-kit/project.json
+++ b/packages/ui-kit/project.json
@@ -5,5 +5,16 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project ui-kit --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "lintFilePatterns": [
+          "./**/*.{ts,tsx, js,jsx}",
+          "./package.json"
+        ]
+      }
+    }
+  }
 }
