--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@nx/js": "20.1.4",
     "@nx/next": "20.1.4",
     "@nx/playwright": "^20.1.4",
+    "@nx/plugin": "20.1.4",
     "@nx/react": "20.1.4",
     "@nx/vite": "^20.1.4",
     "@nx/web": "20.1.4",
     "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.49.0",
     "@swc-node/register": "~1.9.2",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.10.0",
     "@swc/helpers": "~0.5.15",
     "@tailwindcss/vite": "4.0.0-beta.5",
@@ -58,6 +60,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~25.0.1",
+    "jsonc-eslint-parser": "^2.4.0",
     "nx": "20.1.4",
     "postcss": "8.4.49",
     "prettier": "^3.4.2",
