chore(release): add `pnpm run release` , enable github releases via nx release

--- a/nx.json
+++ b/nx.json
@@ -79,6 +79,12 @@
     }
   },
   "release": {
+    "changelog": {
+      "workspaceChangelog": {
+        "createRelease": "github",
+        "file": false
+      }
+    },
     "conventionalCommits": {
       "types": {
         "docs": {
