--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: pnpm/action-setup@v4
+        with:
+            version: 9
       - name: Install Node
         uses: actions/setup-node@v4
         with:
@@ -26,15 +29,15 @@ jobs:
           registry-url: https://registry.npmjs.org/
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
         shell: bash
 
       - name: Print Environment Info
-        run: npx nx report
+        run: pnpm exec nx report
         shell: bash
 
       - name: Publish packages
-        run: npx nx release publish
+        run: pnpm exec nx release publish
         shell: bash
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
