--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,10 +35,14 @@ jobs:
       - name: Print Environment Info
         run: pnpm exec nx report
         shell: bash
-
+      - name: Authenticate with npm
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          echo "//registry.npmjs.org/:_authToken=\${NODE_AUTH_TOKEN}" > ~/.npmrc
       - name: Publish packages
         run: |
-          pnpm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
+          pnpm config set //registry.npmjs.org/:_authToken ${NODE_AUTH_TOKEN}
           pnpm exec nx release publish
         shell: bash
         env:
