--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -28,5 +28,8 @@
     "vite-plugin-dts": "~4.3.0",
     "vitest": "^2.1.8",
     "react": "19.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
