--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-            version: 9
+          version: 9
       - name: Install Node
         uses: actions/setup-node@v4
         with:
@@ -34,6 +34,9 @@ jobs:
 
       - name: Print Environment Info
         run: pnpm exec nx report
+        shell: bash
+      - name: Build packages
+        run: pnpm exec nx build
         shell: bash
       - name: Authenticate with npm
         env:
