--- a/package.json
+++ b/package.json
@@ -17,21 +17,32 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "@chromatic-com/storybook": "^3",
     "@eslint/compat": "^1.2.4",
     "@eslint/js": "^9.16.0",
     "@nx/devkit": "20.1.4",
     "@nx/eslint": "20.1.4",
     "@nx/eslint-plugin": "20.1.4",
     "@nx/jest": "20.1.4",
-    "@nx/js": "20.1.4",
+    "@nx/js": "20.3.1",
     "@nx/next": "20.1.4",
     "@nx/playwright": "^20.1.4",
     "@nx/plugin": "20.1.4",
     "@nx/react": "20.1.4",
+    "@nx/storybook": "^20.3.1",
     "@nx/vite": "^20.1.4",
-    "@nx/web": "20.1.4",
+    "@nx/web": "20.3.1",
     "@nx/workspace": "20.1.4",
     "@playwright/test": "^1.49.0",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/core-server": "^8.4.7",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@storybook/test-runner": "^0.21.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.2",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.10.0",
@@ -68,6 +79,7 @@
     "postcss": "8.4.49",
     "prettier": "^3.4.2",
     "rollup-preserve-directives": "^1.1.3",
+    "storybook": "^8.4.7",
     "tailwind-merge": "^2.5.5",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
