--- a/packages/ui-kit/project.json
+++ b/packages/ui-kit/project.json
@@ -15,6 +15,13 @@
           "./package.json"
         ]
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "packages/ui-kit/.storybook"
+      }
     }
   }
 }
