--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@playwright/test": "^1.49.0",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-themes": "^8.4.7",
     "@storybook/core-server": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
