--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwindcss": "4.0.0-beta.8"
+    "tailwindcss": "4.0.0-beta.8",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
