--- a/packages/ui-kit/project.json
+++ b/packages/ui-kit/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/ui-kit/src",
   "projectType": "library",
+  "implicitDependencies": ["models"],
   "tags": [],
   "// targets": "to see all targets run: nx show project ui-kit --web",
   "targets": {
