--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,9 +47,13 @@ jobs:
           
       - name: Publish packages
         run: |
-          pnpm config set //registry.npmjs.org/:_authToken ${NODE_AUTH_TOKEN}
-          pnpm exec nx release publish
+          cd dist/packages
+          for dir in */ ; do
+            cd $dir
+            npm publish --access public
+            cd ..
+          done
         shell: bash
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        #   NPM_CONFIG_PROVENANCE: true
+          NPM_CONFIG_PROVENANCE: true
