--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Publish
 
 on:
-  # release:
-  #   types: [published]
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
@@ -51,6 +51,7 @@ jobs:
           cd dist/packages
           for dir in */ ; do
             cd $dir
+            echo "Publishing $dir"
             npm publish --access public
             cd ..
           done
