--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/postcss": "4.0.0-beta.8",
+    "i18n": "^0.15.1",
     "next": "15.1.3",
+    "next-intl": "^3.26.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "4.0.0-beta.8",
