--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "4.0.0-beta.8",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "i18n": "^0.15.1",
+    "next-intl": "^3.26.3",
+    "lucide-react": "^0.473.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
