--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -23,11 +23,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "glob": "^11.0.0",
+    "lucide-react": "^0.473.0",
+    "react": "19.0.0",
     "rollup-preserve-directives": "^1.1.3",
     "tailwind-merge": "^2.5.5",
     "vite-plugin-dts": "~4.3.0",
-    "vitest": "^2.1.8",
-    "react": "19.0.0"
+    "vitest": "^2.1.8"
   },
   "publishConfig": {
     "access": "public"
