--- a/packages/ui-kit/tsconfig.json
+++ b/packages/ui-kit/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "paths": {
+      "@/models": ["../models/src/index"],
       "@/components/*": ["./lib/components/*"],
       "@/assets/*": ["./lib/assets/*"],
       "@/hooks/*": ["./lib/hooks/*"],
@@ -23,6 +24,13 @@
     "strict": true,
     "types": ["vite/client", "vitest", "@testing-library/jest-dom"]
   },
-  "include": ["lib/**/*.ts", "lib/**/*.tsx", "tests/**/*.ts", "tests/**/*.tsx", "stories/**/*.ts", "stories/**/*.tsx"],
-  "exclude": ["node_modules", "dist", "tools"],
+  "include": [
+    "lib/**/*.ts",
+    "lib/**/*.tsx",
+    "tests/**/*.ts",
+    "tests/**/*.tsx",
+    "stories/**/*.ts",
+    "stories/**/*.tsx"
+  ],
+  "exclude": ["node_modules", "dist", "tools"]
 }
