--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "4.0.0-beta.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "16.1.0",
+    "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
