--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "private": true,
   "dependencies": {
+    "@maany_shr/e-class-models": "^1.4.2",
     "@tailwindcss/postcss": "4.0.0-beta.8",
     "i18n": "^0.15.1",
+    "lucide-react": "^0.473.0",
     "next": "15.1.3",
     "next-intl": "^3.26.3",
     "react": "19.0.0",
@@ -84,7 +86,6 @@
     "storybook": "^8.4.7",
     "tailwind-merge": "^2.5.5",
     "ts-jest": "^29.2.5",
-    "lucide-react": "^0.473.0",
     "ts-node": "10.9.1",
     "tslib": "^2.8.1",
     "typescript": "~5.7.2",
