Squashed commit message

--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -25,7 +25,8 @@
     "**/*.jsx",
     "../../apps/platform/.next/types/**/*.ts",
     "../../dist/apps/platform/.next/types/**/*.ts",
-    "next-env.d.ts"
-  ],
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
+, "postcss.config.mjs"  ],
   "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
