--- a/package.json
+++ b/package.json
@@ -1,54 +1,102 @@
 {
-  "name": "@e-class-monorepo/source",
+  "name": "@dad-e-class/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "release": "nx release -d --skip-publish",
+    "release:github": "GH_TOKEN=$(gh auth token) nx release --skip-publish"
+  },
   "private": true,
   "dependencies": {
-    "next": "14.2.16",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@tailwindcss/postcss": "4.0.0-beta.8",
+    "i18n": "^0.15.1",
+    "next": "15.1.3",
+    "next-intl": "^3.26.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwindcss": "4.0.0-beta.8",
+    "zod": "^3.24.1",
+    "lucide-react": "^0.473.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/js": "^9.8.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@chromatic-com/storybook": "^3.2.3",
+    "@eslint/compat": "^1.2.4",
+    "@eslint/js": "^9.16.0",
     "@nx/devkit": "20.1.4",
     "@nx/eslint": "20.1.4",
     "@nx/eslint-plugin": "20.1.4",
     "@nx/jest": "20.1.4",
-    "@nx/js": "20.1.4",
+    "@nx/js": "20.3.1",
     "@nx/next": "20.1.4",
-    "@nx/playwright": "20.1.4",
+    "@nx/playwright": "^20.1.4",
+    "@nx/plugin": "20.1.4",
+    "@nx/react": "20.1.4",
+    "@nx/storybook": "^20.3.1",
+    "@nx/vite": "^20.1.4",
+    "@nx/web": "20.3.1",
     "@nx/workspace": "20.1.4",
-    "@playwright/test": "^1.36.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@testing-library/react": "15.0.6",
-    "@types/jest": "^29.5.12",
+    "@playwright/test": "^1.49.0",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-themes": "^8.4.7",
+    "@storybook/core-server": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@storybook/test-runner": "^0.21.0",
+    "@swc-node/register": "~1.9.2",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.10.0",
+    "@swc/helpers": "~0.5.15",
+    "@tailwindcss/vite": "4.0.0-beta.5",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "16.1.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.8.0",
-    "eslint-config-next": "14.2.16",
-    "eslint-config-prettier": "^9.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "15.1.3",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-playwright": "^2.1.0",
+    "eslint-plugin-react": "7.37.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "glob": "^11.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "~25.0.1",
+    "jsonc-eslint-parser": "^2.4.0",
     "nx": "20.1.4",
-    "postcss": "8.4.38",
-    "prettier": "^2.6.2",
-    "tailwindcss": "3.4.3",
-    "ts-jest": "^29.1.0",
+    "postcss": "8.4.49",
+    "prettier": "^3.4.2",
+    "rollup-preserve-directives": "^1.1.3",
+    "storybook": "^8.4.7",
+    "tailwind-merge": "^2.5.5",
+    "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0"
+    "tslib": "^2.8.1",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.17.0",
+    "vite": "^5.4.11",
+    "vite-plugin-dts": "~4.3.0",
+    "vitest": "^2.1.8"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.2",
+      "@types/react-dom": "19.0.2"
+    }
   }
 }
