--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "rootDir": ".",
+    "rootDir": "../..",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
@@ -14,7 +14,18 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@dad-e-class/dad-nx-vite": ["tools/dad-nx-vite/src/index.ts"],
+      "@maany_shr/e-class-models": ["packages/models/src/index.ts"],
+      "@dad-e-class/nx-dad": ["tools/nx-dad/src/index.ts"],
+      "@maany_shr/e-class-ui-kit": ["packages/ui-kit/lib/index.ts"],
+      "@maany_shr/e-class-ui-kit/contexts": [
+        "packages/ui-kit/lib/contexts/index.ts"
+      ],
+      "@maany_shr/e-class-ui-kit/tailwind.css": [
+        "packages/ui-kit/lib/assets/css/tailwind.css"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
