feat(i18n): setup translations package and create an example of translations, ui-kit, platform connections

--- a/packages/models/tsconfig.json
+++ b/packages/models/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "jsx": "react-jsx",
     "allowJs": false,
+    "composite": true,
+    "declaration": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
