--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/postcss": "4.0.0-beta.8",
+    "i18n": "^0.15.1",
+    "lucide-react": "^0.473.0",
     "next": "15.1.3",
+    "next-intl": "^3.26.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "4.0.0-beta.8",
-    "zod": "^3.24.1",
-    "i18n": "^0.15.1",
-    "next-intl": "^3.26.3",
-    "lucide-react": "^0.473.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -58,6 +58,8 @@
     "@types/node": "18.16.9",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
