--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -27,7 +27,8 @@
     "rollup-preserve-directives": "^1.1.3",
     "tailwind-merge": "^2.5.5",
     "vite-plugin-dts": "~4.3.0",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "next-intl": "^3.26.3"
   },
   "publishConfig": {
     "access": "public"
