--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.17.0",
     "vite": "^5.4.11",
-    "vite-plugin-dts": "~4.3.0",
+    "vite-plugin-checker": "^0.8.0",
+    "vite-plugin-dts": "~4.5.0",
     "vitest": "^2.1.8"
   },
   "pnpm": {
