--- a/packages/models/tsconfig.spec.json
+++ b/packages/models/tsconfig.spec.json
@@ -1,7 +1,7 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "./out-tsc/vitest",
     "types": [
       "vitest/globals",
       "vitest/importMeta",
@@ -24,5 +24,11 @@
     "tests/**/*.test.jsx",
     "tests/**/*.spec.jsx",
     "tests/**/*.d.ts"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    
   ]
 }
