--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -2,12 +2,14 @@
   "name": "@maany_shr/e-class-ui-kit",
   "version": "1.4.2",
   "main": "./index.js",
+  "module": "./index.js",
   "types": "./index.d.ts",
   "type": "module",
   "exports": {
     ".": {
-      "import": "./index.js",
-      "require": "./index.js"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     },
     "./css/tailwind.css": {
       "import": "./css/tailwind.js"
@@ -16,7 +18,6 @@
   },
   "dependencies": {
     "@nx/vite": "^20.1.4",
-    "@tailwindcss/vite": "4.0.0-beta.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "16.1.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -28,7 +29,7 @@
     "tailwind-merge": "^2.5.5",
     "vite-plugin-dts": "~4.3.0",
     "vitest": "^2.1.8",
-    "next-intl": "^3.26.3"
+    "@maany_shr/e-class-translations": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
