--- a/packages/ui-kit/tsconfig.json
+++ b/packages/ui-kit/tsconfig.json
@@ -1,53 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "rootDir": ".",
-    "baseUrl": ".",
-    "composite": true,
-    "declaration": true,
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "paths": {
-      "@maany_shr/e-class-models": ["../models/src/index.ts"],
-      "@maany_shr/e-class-translations": ["../translations/src/index.ts"],
-      "@/components/*": ["./lib/components/*"],
-      "@/assets/*": ["./lib/assets/*"],
-      "@/hooks/*": ["./lib/hooks/*"],
-      "@/contexts/*": ["./lib/contexts/*"]
-    },
-    "skipLibCheck": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "module": "ESNext",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "moduleResolution": "bundler",
-    "allowJs": false,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "types": ["vite/client", "vitest", "@testing-library/jest-dom"]
-  },
-  "include": [
-    "lib/**/*.ts",
-    "lib/**/*.tsx",
-    "tests/**/*.ts",
-    "tests/**/*.tsx",
-    "stories/**/*.ts",
-    "stories/**/*.tsx",
-  ],
-  "exclude": ["node_modules", "dist", "tools"],
+  "files": [],
   "references": [
+    // This project's other tsconfig.*.json files
     {
       "path": "./tsconfig.lib.json"
     },
     {
       "path": "./tsconfig.spec.json"
-    },
-    {
-      "path": "../translations/tsconfig.json"
-    },
-    {
-      "path": "../models/tsconfig.json"
     }
   ]
 }
