--- a/packages/ui-kit/tsconfig.lib.json
+++ b/packages/ui-kit/tsconfig.lib.json
@@ -1,12 +1,11 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "rootDir": ".",
-    "baseUrl": ".",
-    "outDir": "../../dist/out-tsc",
-    "composite": true,
-    "declaration": true,
-    "noEmit": false,
+    "rootDir": "lib",
+    "outDir": "./out-tsc/lib",
+    "allowSyntheticDefaultImports": true,
+    "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
+    "jsx": "react-jsx",
     "types": [
       "node",
       "@nx/react/typings/cssmodule.d.ts",
@@ -15,8 +14,11 @@
     ]
   },
   "skipLibCheck": true,
-  "include": ["lib/**/*.js", "lib/**/*.jsx", "lib/**/*.ts", "lib/**/*.tsx"],
+  "include": ["lib/**/*.ts", "lib/**/*.tsx"],
   "exclude": [
+    "node_modules",
+    "dist",
+    "tools",
     "**/*.spec.ts",
     "**/*.test.ts",
     "**/*.spec.tsx",
@@ -44,10 +46,10 @@
   ],
   "references": [
     {
-      "path": "../translations/tsconfig.json"
+      "path": "../translations/tsconfig.lib.json"
     },
     {
-      "path": "../models/tsconfig.json"
+      "path": "../models/tsconfig.lib.json"
     }
   ]
 }
