--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,11 @@
     {
       "path": "./packages/models"
     },
+    {
+      "path": "./apps/platform-e2e"
+    },
+    {
+      "path": "./apps/platform"
+    }
   ]
 }
