--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@dad-e-class/source",
   "version": "0.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "release": "nx release -d --skip-publish",
     "release:github": "GH_TOKEN=$(gh auth token) nx release --skip-publish"
