--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 **/*.tsbuildinfo
-
+eslint.config.d.ts
+eslint.config.d.ts.map
+tsconfig.tsbuildinfo
 # compiled output
 dist
 tmp
