chore(linting): backup

--- a/apps/platform-e2e/tsconfig.json
+++ b/apps/platform-e2e/tsconfig.json
@@ -4,7 +4,6 @@
     "allowJs": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": false,
-    "module": "commonjs"
   },
   "include": [
     "**/*.ts",
@@ -15,5 +14,6 @@
     "src/**/*.test.ts",
     "src/**/*.test.js",
     "src/**/*.d.ts"
-  ]
+  ],
+  "exclude": ["node_modules", "dist", "eslint.config.js"],
 }
