--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -23,8 +23,7 @@
     "clsx": "^2.1.1",
     "react": "19.0.0",
     "tailwind-merge": "^2.5.5",
-    "vitest": "^2.1.8",
-    "@maany_shr/e-class-translations": "workspace:*"
+    "vitest": "^2.1.8"
   },
   "publishConfig": {
     "access": "public"
