fix(setup): Fix lint typecheck build test targets for packages ( models, translations, ui-kit)

--- a/apps/platform-e2e/tsconfig.json
+++ b/apps/platform-e2e/tsconfig.json
@@ -15,5 +15,8 @@
     "src/**/*.test.ts",
     "src/**/*.test.js",
     "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "../../eslint.config.mjs",
   ]
 }
