--- a/packages/models/project.json
+++ b/packages/models/project.json
@@ -5,13 +5,5 @@
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project models --web",
-  "targets": {
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["./**/*.{ts,tsx, js,jsx}", "./package.json"]
-      }
-    }
-  }
+  "targets": {}
 }
