--- a/packages/ui-kit/tsconfig.spec.json
+++ b/packages/ui-kit/tsconfig.spec.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/vitest",
+    "jsx": "react-jsx",
     "types": [
       "vitest/globals",
       "vitest/importMeta",
