--- a/packages/ui-kit/tsconfig.lib.json
+++ b/packages/ui-kit/tsconfig.lib.json
@@ -48,6 +48,9 @@
   "references": [
     {
       "path": "../translations/tsconfig.lib.json"
+    },
+    {
+      "path": "../models/tsconfig.lib.json"
     }
   ]
 }
