fix(lint): resolve linting errors, update translations, and replace lucide-react icons with SVGs

--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -34,6 +34,9 @@
   "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
   "references": [
     {
+      "path": "../../packages/models"
+    },
+    {
       "path": "../../packages/ui-kit"
     },
     {
