chore(ui-kit, storybook): add tsconfig.storybook.json

--- a/packages/ui-kit/tsconfig.json
+++ b/packages/ui-kit/tsconfig.json
@@ -7,13 +7,16 @@
       "path": "../translations"
     },
     {
+      "path": "../models"
+    },
+    {
       "path": "./tsconfig.lib.json"
     },
     {
       "path": "./tsconfig.spec.json"
     },
     {
-      "path": "../models"
+      "path": "./tsconfig.storybook.json"
     }
   ]
 }
