feat(course-card): add course models, translations, and icons

--- a/packages/ui-kit/tsconfig.json
+++ b/packages/ui-kit/tsconfig.json
@@ -6,6 +6,9 @@
       "path": "../translations"
     },
     {
+      "path": "../models"
+    },
+    {
       "path": "./tsconfig.lib.json"
     },
     {
