feat(auth): add dependency on e-class-models, implement auth function, and create tests

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@dad-e-class/auth",
   "version": "0.0.1",
-  "dependencies": {},
+  "dependencies": {
+    "@maany_shr/e-class-models": "workspace:*"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
