chore(nx): add generatorOptions to skip lock file update in preVersionCommand

--- a/nx.json
+++ b/nx.json
@@ -139,7 +139,10 @@
       }
     },
     "version": {
-      "preVersionCommand": "pnpm dlx nx run-many --target=build --all"
+      "preVersionCommand": "pnpm dlx nx run-many --target=build --all",
+      "generatorOptions": {
+        "skipLockFileUpdate": true
+      }
     },
     "versionPlans": true
   }
