chore(auth): rename package to @maany_shr/e-class-auth

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dad-e-class/auth",
+  "name": "@maany_shr/e-class-auth",
   "version": "1.4.1",
   "type": "module",
   "main": "./index.js",
