feat(env): update environment variable template with roles claim key and platform naming

--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -6,3 +6,9 @@ AUTH_AUTH0_CLIENT_ID="YOUR_CLIENT_ID"
 AUTH_AUTH0_CLIENT_SECRET="YOUR_CLIENT_SECRET"
 AUTH_AUTH0_ISSUER="YOUR_ISSUER"
 AUTH_AUTH0_AUTHORIZATION_URL="YOUR_AUTHORIZATION_URL"
+AUTH_AUTH0_ROLES_CLAIM_KEY="YOUR_CONFIGURED_KEY_FOR_ROLES_CLAIM"
+
+
+E_CLASS_PLATFORM_SHORT_NAME="dev"
+E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
+
