feat(auth): add support for test accounts and improve localization handling in authentication flow

--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -7,6 +7,9 @@
       "path": "../models"
     },
     {
+      "path": "../translations"
+    },
+    {
       "path": "./tsconfig.lib.json"
     },
     {
