--- a/packages/auth/tsconfig.lib.json
+++ b/packages/auth/tsconfig.lib.json
@@ -29,6 +29,9 @@
   "references": [
     {
       "path": "../models/tsconfig.lib.json"
+    },
+    {
+      "path": "../translations/tsconfig.lib.json"
     }
   ],
 }
