--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -8,6 +8,8 @@ AUTH_AUTH0_ISSUER="YOUR_ISSUER"
 AUTH_AUTH0_AUTHORIZATION_URL="YOUR_AUTHORIZATION_URL"
 AUTH_AUTH0_ROLES_CLAIM_KEY="YOUR_CONFIGURED_KEY_FOR_ROLES_CLAIM"
 
+# AUTH Test Accounts for Playwright testing using credentials workflow
+AUTH_ENABLE_TEST_ACCOUNTS="true"
 
 E_CLASS_PLATFORM_SHORT_NAME="dev"
 E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
