chore(ci): remove .env.ci file and update CI workflow to copy from .env.local.template

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       
       - name: Copy .env file
         run: |
-         cp .env.ci .env
+         cp apps/platform/.env.local.template apps/platform/.env
 
       # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
       # - run: pnpm exec nx-cloud record -- echo Hello World
