--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -1,4 +1,5 @@
 # Authentication Secret - Can be added by `npx auth`. Read more: https://cli.authjs.dev
+# This file in used in the CI/CD pipeline to build the platform.
 AUTH_SECRET="SOME SECRET"
 
 # Auth0 Configuration
